# FcstLabPro

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  job.yaml  pyproject.toml  requirements.txt
configs/: base.yaml
configs/experiments/: exp_001_baseline.yaml  exp_002_flow_features.yaml
data/raw/: .gitkeep
deploy/: DEPLOY_GUIDE.md  gcloud_deploy.sh
docs/: experiment_skills.md  llm_strategy_proposal.md
experiments/: .gitkeep  registry.json
experiments/baseline_T14_X8_20260212_233203_9f4a23/: config.yaml  feature_importance.csv  fold_metrics.csv  meta.json
notebooks/: .gitkeep
plans/: code_changes_summary.md  email_issue_diagnosis.md  fix_implementation_plan.md  model_opt_0215.md  next_steps.md  优化建议_old.md
reports/: .gitkeep  compare_baseline_T14_X8_2026_vs_baseline_v2_quick_20.md  derivatives_analysis.md  diagnostic_analysis.md  feature_study_summary.md  final_comprehensive_report.md  label_study_summary.md  phase2_summary.md  signal_report_2026-02-14.md  signal_report_2026-02-15.md  v6_vs_v9_comparison.md  weekly_prediction_report.md  weekly_version_comparison.md
scripts/: compare_experiments.py  compare_v8_experiments.py  compare_weekly_versions.py  docker_entrypoint.sh  download_data.py  download_external_data.py  manage_experiments.py  param_search.py  predict.py  run_ensemble.py  run_experiment.py  run_weekly_prediction.py  send_signal_email.py  switch_weekly_model.sh  weekly_signal.py
src/: __init__.py
src/data/: downloader.py  external.py  (+2 more)
tests/: test_experiment.py  test_features.py  test_labels.py  test_models.py
(+417 files in other folders)
